--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,9 +1,12 @@
 {% extends "KITS/base2.html" %}
 
 {% block content %}
-  <h2>Password Change Complete</h2>
-    <p>Your password was successfully reset!</p>
-    <p>
-        <a class="btn btn-success" href="{% url 'login' %}" role="button">Log Back In</a>
-    </p>
+    <div class="d-flex flex-column align-items-center mt-5">
+        <h5>Password Change Complete</h5>
+        <p>Your password was successfully reset!</p>
+        <p>
+            <a class="btn btn-success" href="{% url 'login' %}" role="button">Log Back In</a>
+        </p>
+    </div>
+
 {% endblock %}
