--- a/templates/KITS/home.html
+++ b/templates/KITS/home.html
@@ -1,73 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 
 {% extends 'KITS/base2.html' %}
 {% block content %}
 
-    <style>
-        body{
-        background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url();
-        height: 100vh;
-        -webkit-background-size: cover;
-        background-size: cover;
-        background-position: center center;
-        position: relative;
-}
-        .welcome-text{
-            position: absolute;
-            width: 600px;
-            height: 100px;
-            margin: 20% 30%;
-            text-align: center;
-        }
-        .welcome-text h1 {
-            text-align: center;
-            text-transform: uppercase;
-            font-size: 60px;
-            color: #fff;
-        }
-        .welcome-text a {
-            border: 1px solid #fff;
-            padding: 10px 25px;
-            text-decoration: none;
-            font-size: 14px;
-            margin-top: 20px;
-            display: inline-block;
-            color: #fff;
-        }
-        .welcome-text p {
-            color: #fff;
-            font-size: 16px;
-        }
-        hr {
-            width: 60%;
-            margin-left:auto;
-            margin-right: auto;
-            background-color: white;
-        }
-
-    </style>
     <body>
-        <div class="welcome-text">
+        <div class="d-flex align-items-center">
+            <div class="container text-center" style="padding-top: 15%;">
             <h1>Welcome to KITS!</h1>
-            <p>The Kit Inventory Tracking System application was created to help clinical trial sites track their </b>
-                research kits used in the multiple studies conducted by the sites.
-            </p>
-            {% load static %}
-
-
-        {% if user.is_authenticated %}
-            <hr>
             <p>
-
+                The Kit Inventory Tracking System application was created to help clinical trial sites <br />
+                track their research kits used in the multiple studies conducted by the sites.
             </p>
 
-        {% else %}
-            <a href="{% url 'login' %}?next={{request.path}}">Log In</a>
-
+        {% if not user.is_authenticated %}
+            <a class="btn btn-outline-success" href="{% url 'login' %}?next={{request.path}}">Log In</a>
         {% endif %}
         </div>
+        </div>
+
     </body>
-{% endblock content %}
+{% endblock %}
 
 </html>
