--- a/templates/KITS/kit_addlocation.html
+++ b/templates/KITS/kit_addlocation.html
@@ -5,20 +5,11 @@
 
 {% block content %}
 
-    <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;
-}
-    </style>
-
-    <div class="box">
-    <h1>Edit Kit Location</h1>
+    <div class="container-fluid">
+    <h2>Add Kit Location</h2>
     <form method="POST" class="">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-success">Update</button>
+        <button type="submit" class="save btn btn-success">Add</button>
     </form>
     </div>
 
