--- a/templates/KITS/list_history.html
+++ b/templates/KITS/list_history.html
@@ -2,21 +2,16 @@
 <html lang="en">
 {% extends 'KITS/base2.html' %}
 {% block content %}
-    <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;
-}
-    </style>
-    <div class="box">
-        <H1><b style="font-size: .75em;">Kit Instance History</b></H1>
+
+    <div class="container-fluid">
+        <H2>Kit Instance History</H2>
         <hr>
-        <p><b style="font-size: 1.4em;">Action Key:</b></p>
-        <p><b style="font-size: 1.2em;">&emsp;+ = Created</b></p>
-        <p><b style="font-size: 1.2em;">&emsp;~ = Changed</b></p>
-        <table class="table table-striped table-bordered table-hover">
+        <div class="d-flex">
+            <h5>Action Key:</h5>
+            <h5 class="ms-5">+ = Created</h5>
+            <h5 class="ms-5">~ = Changed</h5>
+        </div>
+        <table class="table table-striped table-bordered table-hover table-secondary">
             <thead>
             <tr class="bg-info">
                 <th>#</th>
