--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -2,25 +2,8 @@
 <html lang="en">
 {% extends 'KITS/base2.html' %}
 {% block content %}
-    <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 10px;
-    padding-bottom: 100px;
-    border-radius: 4px;
-}
-    .column {
-        float: left;
-        width: 50%;
-        border-right: 1px;
-    }
-    </style>
-
-    <div class="box">
-        <H1><b style="font-size: .75em;">Study: {{ study }} {{ study.pet_name }}</b></H1>
-
-        <hr>
+    <div class="container-fluid">
+        <H2>Study: {{ study }} "{{ study.pet_name }}"</H2>
 
         <p><b>Status: </b>{{ study.status }}</p>
         <p><b>Sponsor: </b>{{ study.sponsor_name }}</p>
@@ -31,16 +14,16 @@
             <p><b>Notes:</b> {{ study.comment }}</p>
 
         {% endif %}
+        <a class="btn-sm btn-warning" href="{% url 'KITS:study_detail_study_edit' pk=study.pk %}">Edit Study Details</a>
 
-        <a class="btn btn-warning" href="{% url 'KITS:study_detail_study_edit' pk=study.pk %}">Edit Study Details</a>
         <hr>
         {% if kit_exist == 'False' %}
 
             <p><b>Kits: </b>No kits have been added to this study. To add kits, go to 'Check-In Kits' page.</p>
 
         {% else %}
-            <hr>
-            <table class="table table-striped table-bordered table-hover">
+
+            <table class="table table-striped table-bordered table-hover table-secondary">
                 <thead>
                 <tr class="bg-info">
                     <th>Kit Name</th>
@@ -63,72 +46,69 @@
                         <td>{{ kit.location }}
                         <td>{{ new_req.description }}</td>
                         <td>{{ kit.description }}</td>
-                        <td><a href="{% url 'KITS:kit_edit_from_study' pk=kit.pk %}" class="btn btn-warning">Edit Kit Details</a></td>
-
-
+                        <td><a href="{% url 'KITS:kit_edit_from_study' pk=kit.pk %}" class="btn-sm btn-warning">Edit</a></td>
                     </tr>
-
                 {% endfor %}
                 </tbody>
             </table>
 
-
-            <a href="{% url 'KITS:study_detail_seeallkits' pk=study.pk %}" class="btn btn-warning">See All Kits in Inventory</a>
-            <p style="padding-top:10px;">To add more kits, please go to 'Check-In Kits' page.</p>
+            <a href="{% url 'KITS:study_detail_seeallkits' pk=study.pk %}" class="btn btn-primary">See All Kits</a>
+            <span class="float-end">To add more kits, visit the <a href="{% url 'KITS:kit_list' %}">
+                Check-In Kits</a> page.</span>
 
         {% endif %}
+
         <hr>
 
-        <div class="column">
-        {% if kit_order_exist %}
-            <h3>Kit Ordering Info</h3>
+        <div class="row">
+            <div class="col">
+            {% if kit_order_exist %}
+                <h3>Kit Ordering Info</h3>
 
-                {% if study.kitorder.description != '' %}
-                    <p><b>Description:</b> {{ study.kitorder.description }}</p>
-                {% endif %}
-
-                <p>
-                    {% if study.kitorder.type == 'file' and study.kitorder.file %}
-                        <a class="btn btn-success" href="{{ MEDIA_URL }}{{ kit_order }}" download>Download File</a>
-                    {% elif study.kitorder.type == 'link' and study.kitorder.link != '' %}
-                        <a class="btn btn-success" href="{{ kit_order }}" target="_blank">Visit URL</a>
+                    {% if study.kitorder.description != '' %}
+                        <p><b>Description:</b> {{ study.kitorder.description }}</p>
                     {% endif %}
 
-                    <a href="{% url 'KITS:kit_ordering' pk=study.pk %}" class="btn btn-info">Edit Kit Ordering Info</a>
-                </p>
+                    <p>
+                        {% if study.kitorder.type == 'file' and study.kitorder.file %}
+                            <a class="btn-sm btn-success" href="{{ MEDIA_URL }}{{ kit_order }}" download>Download File</a>
+                        {% elif study.kitorder.type == 'link' and study.kitorder.link != '' %}
+                            <a class="btn-sm btn-success" href="{{ kit_order }}" target="_blank">Visit URL</a>
+                        {% endif %}
 
-        {% else %}
-            <p>{{ kit_order }}</p>
-            <a href="{% url 'KITS:kit_ordering_add' pk=study.pk %}" class="btn btn-success">Add Kit Ordering Info</a>
-        {% endif %}
+                        <a href="{% url 'KITS:kit_ordering' pk=study.pk %}" class="btn-sm btn-warning">Edit</a>
+                    </p>
 
-        </div>
+            {% else %}
+                <p>{{ kit_order }}</p>
+                <a href="{% url 'KITS:kit_ordering_add' pk=study.pk %}" class="btn-sm btn-success">Add</a>
+            {% endif %}
+            </div>
 
-        <div class="column">
-        {% if req_exist %}
-            <h3>Requisition Info</h3>
+            <div class="col">
+            {% if req_exist %}
+                <h3>Requisition Info</h3>
 
-                {% if study.requisition.description != '' %}
-                    <p><b>Description:</b> {{ study.requisition.description }}</p>
-                {% endif %}
-
-                <p>
-                    {% if study.requisition.type == 'file' and study.requisition.file %}
-                        <a class="btn btn-success" href="{{ MEDIA_URL }}{{ req }}" download>Download File</a>
-                    {% elif study.requisition.type == 'link' and study.requisition.link != '' %}
-                        <a class="btn btn-success" href="{{ req }}" target="_blank">Visit URL</a>
+                    {% if study.requisition.description != '' %}
+                        <p><b>Description:</b> {{ study.requisition.description }}</p>
                     {% endif %}
 
-                    <a href="{% url 'KITS:req_edit' pk=study.pk %}" class="btn btn-info">Edit Requisition Info</a>
-                </p>
+                    <p>
+                        {% if study.requisition.type == 'file' and study.requisition.file %}
+                            <a class="btn-sm btn-success" href="{{ MEDIA_URL }}{{ req }}" download>Download File</a>
+                        {% elif study.requisition.type == 'link' and study.requisition.link != '' %}
+                            <a class="btn-sm btn-success" href="{{ req }}" target="_blank">Visit URL</a>
+                        {% endif %}
 
-        {% else %}
-            <p>{{ req }}</p>
-            <a href="{% url 'KITS:create_req' pk=study.pk %}" class="btn btn-success">Add Requisition Info</a>
-        {% endif %}
+                        <a href="{% url 'KITS:req_edit' pk=study.pk %}" class="btn-sm btn-warning">Edit</a>
+                    </p>
+
+            {% else %}
+                <p>{{ req }}</p>
+                <a href="{% url 'KITS:create_req' pk=study.pk %}" class="btn-sm btn-success">Add</a>
+            {% endif %}
+            </div>
         </div>
-
-{% endblock %}
-
     </div>
+{% endblock %}
 </html>
