--- a/templates/KITS/study_list.html
+++ b/templates/KITS/study_list.html
@@ -2,18 +2,10 @@
 <html lang="en">
 {% extends 'KITS/base2.html' %}
 {% block content %}
-    <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;
-}
-    </style>
-    <div class="box">
-        <H1><b style="font-size: .75em;">Studies</b></H1>
-        <hr>
 
+    <div class="container-fluid">
+
+        <H2>Studies</H2>
 
         {% if messages %}
             {% for message in messages %}
@@ -24,18 +16,17 @@
         {% endif %}
 
         <form method="get">
-           {{ study_filter.form }}
+            {{ study_filter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
 
-
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-striped table-secondary table-bordered table-hover">
             <thead>
-            <tr class="bg-info">
+            <tr>
                 <th>IRB</th>
                 <th>Pet Name</th>
                 <th>Study Status</th>
-                <th colspan="3">Actions</th>
+                <th>Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -44,15 +35,16 @@
                 <td>{{ study.IRB_number }}</td>
                 <td>{{ study.pet_name }}</td>
                 <td>{{ study.status }}</td>
-                <td><a href="{% url 'KITS:study_detail' pk=study.pk %}" class="btn btn-info">View Details</a>
+                <td><a href="{% url 'KITS:study_detail' pk=study.pk %}" class="btn-sm btn-primary">Details</a>
                     <a href="{% url 'KITS:study_archive' pk=study.pk %}"
                         onclick="return confirm('Are you sure you want to archive {{ study.pet_name }}?')"
-                        class="btn btn-danger">Archive</a></td>
+                        class="btn-sm btn-danger">Archive</a>
+                </td>
             </tr>
             {% endfor %}
             </tbody>
         </table>
-    <a href="{% url 'KITS:create_study' %}" class="btn btn-success">Create a Study</a>
+        <a href="{% url 'KITS:create_study' %}" class="btn btn-success">Create a Study</a>
     </div>
 {% endblock %}
 
