--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,43 +2,44 @@
 <html lang="en">
 {% extends 'KITS/base2.html' %}
 {% block content %}
-<div class="container">
-{% if form.errors %}
-    <div class="alert alert-danger" role="alert">
-        The username or password you entered is incorrect. Please try again or reset your password.
+
+    <div class="d-flex flex-column align-items-center mt-5">
+    {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+            The username or password you entered is incorrect. Please try again or reset your password.
+        </div>
+      {% endif %}
+
+      {% if next %}
+        {% if user.is_authenticated %}
+          <p>Your account doesn't have access to this page. To proceed,
+          please login with an account that has access.</p>
+        {% else %}
+          <h5>Please login to access this website.</h5>
+        {% endif %}
+      {% endif %}
+
+      <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <table>
+          <tr>
+            <td>{{ form.username.label_tag }}</td>
+            <td>{{ form.username }}</td>
+          </tr>
+          <tr>
+            <td>{{ form.password.label_tag }}</td>
+            <td>{{ form.password }}</td>
+          </tr>
+        </table>
+        <input class="btn btn-success" type="submit" value="Login" />
+        <input type="hidden" name="next" value="{{ next }}" />
+
+          {# Assumes you setup the password_reset view in your URLconf #}
+        <a href="{% url 'password_reset' %}" class="btn btn-warning">Forgot Password</a>
+      </form>
+
+
     </div>
-  {% endif %}
-
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
-    {% else %}
-      <p>Please login to access this website.</p>
-    {% endif %}
-  {% endif %}
-
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-      <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-      </tr>
-    </table>
-    <input class="btn btn-success" type="submit" value="Login" />
-    <input type="hidden" name="next" value="{{ next }}" />
-
-      {# Assumes you setup the password_reset view in your URLconf #}
-    <a href="{% url 'password_reset' %}" class="btn btn-info">Lost password?</a>
-  </form>
-
-
-</div>
 {% endblock content %}
 
 </html>
