--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -2,7 +2,8 @@
 
 {% block content %}
     {% if validlink %}
-        <h2>Change Password</h2>
+        <div class="d-flex flex-column align-items-center mt-5">
+        <h5>Enter New Password</h5>
         <p>Please enter (and confirm) your new password.</p>
         <form action="" method="post">
         {% csrf_token %}
@@ -17,12 +18,10 @@
                         <label for="id_new_password2">Confirm password:</label></td>
                     <td>{{ form.new_password2 }}</td>
                 </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Change Password" /></td>
-                </tr>
             </table>
+            <input class="btn btn-success" type="submit" value="Change Password" />
         </form>
+        </div>
     {% else %}
         <h2>Password Reset Failed</h2>
         <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
