--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,14 +1,22 @@
 {% extends "KITS/base2.html" %}
 
 {% block content %}
-  <form action="" method="post">
-  {% csrf_token %}
-  {% if form.email.errors %}
-    {{ form.email.errors }}
-  {% endif %}
-    <h2>Password Reset</h2>
-    <p>Please enter an email to send confirmation of your password reset.</p>
-      <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-info" value="Send Password Reset Email">
-  </form>
+    <div class="d-flex flex-column align-items-center mt-5">
+        <form action="" method="post">
+        {% csrf_token %}
+        {% if form.email.errors %}
+            {{ form.email.errors }}
+        {% endif %}
+            <h5>Password Change</h5>
+            <p>Please enter an email to send confirmation of your password reset.</p>
+            <table>
+                <tr>
+                    <td>{{ form.email.label_tag }}</td>
+                    <td>{{ form.email }}</td>
+                </tr>
+            </table>
+            <input type="submit" class="btn btn-success" value="Send Password Reset Email">
+        </form>
+    </div>
+
 {% endblock %}
