--- a/templates/KITS/user_list.html
+++ b/templates/KITS/user_list.html
@@ -2,18 +2,9 @@
 <html lang="en">
 {% extends 'KITS/base2.html' %}
 {% block content %}
-    <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;
-}
-    </style>
-    <div class="box">
-        <H1><b style="font-size: .75em;">Studies</b></H1>
-        <hr>
 
+    <div class="container-fluid">
+        <H2>Studies</H2>
 
         {% if messages %}
             {% for message in messages %}
@@ -29,7 +20,7 @@
         </form>
 
 
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-striped table-bordered table-hover table-secondary">
             <thead>
             <tr class="bg-info">
                 <th>User Name</th>
@@ -44,7 +35,7 @@
                 <td>{{ user.username }}</td>
                 <td>{{ user.id }}</td>
 
-                <td><a href="{% url 'KITS:report_userstudies' pk=user.pk %}" class="btn btn-info">Select User</a>
+                <td><a href="{% url 'KITS:report_userstudies' pk=user.pk %}" class="btn-sm btn-primary">Select User</a>
             </tr>
             {% endfor %}
             </tbody>
