--- a/templates/KITS/report_activestudies.html
+++ b/templates/KITS/report_activestudies.html
@@ -56,8 +56,9 @@
         <button class="btn btn-primary" type="submit">Search</button>
         </form>
 
+        <hr>
         <p> Kit Activity from {{ startdate }} to {{ enddate }}</p>
-
+        <hr>
         <div class="row">
         <div class="column12" style="background-color:#aaa; margin-left: 12px;">
         <h2>Most Active Studies</h2>
@@ -110,7 +111,7 @@
             </table>
         </div>
 
-        <div class="column3" style="background-color:#ccc;">
+        <div class="column3" style="background-color:white;">
             {{ graph|safe }}
         </div>
         </div>
