--- a/templates/KITS/home.html
+++ b/templates/KITS/home.html
@@ -14,7 +14,7 @@
             </p>
 
         {% if not user.is_authenticated %}
-            <a class="btn btn-outline-success" href="{% url 'login' %}?next={{request.path}}">Log In</a>
+            <a class="btn btn-outline-success" href="{% url 'login' %}">Log In</a>
         {% endif %}
         </div>
         </div>
