--- a/templates/KITS/report_activestudies.html
+++ b/templates/KITS/report_activestudies.html
@@ -99,7 +99,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for study in notactive_studies %}
+                {% for study in not_active_studies %}
                     <tr>
                         {% for s in study %}
                         <td>{{ s }}</td>
@@ -113,6 +113,9 @@
 
         <div class="column3" style="background-color:white;">
             {{ graph|safe }}
+
+            <hr>
+            {{ test }}
         </div>
         </div>
 
