Navbar centering, moved Reports into dropdown menu, wording changes

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -15,7 +15,7 @@
           <p>Your account doesn't have access to this page. To proceed,
           please login with an account that has access.</p>
         {% else %}
-          <h5>Please login to access this website.</h5>
+          <h5>Please login to access this webpage.</h5>
         {% endif %}
       {% endif %}
 
