--- a/templates/KITS/report_activestudies.html
+++ b/templates/KITS/report_activestudies.html
@@ -120,7 +120,7 @@
         </div>
 
 
-        <a href="" class="btn btn-success">Export report</a>
+        <a href="" class="btn btn-success">Export Report</a>
 
     </div>
 {% endblock %}
