--- a/templates/KITS/report_expiredkits.html
+++ b/templates/KITS/report_expiredkits.html
@@ -42,7 +42,7 @@
             {% endfor %}
             </tbody>
         </table>
-        <a href="" class="btn btn-success">Export report</a>
+        <a href="{% url 'KITS:export_expiredkits' %}" class="btn btn-success">Export Report</a>
 
     </div>
 {% endblock %}
