--- a/templates/KITS/report_expiredkits_studies.html
+++ b/templates/KITS/report_expiredkits_studies.html
@@ -35,7 +35,7 @@
             {% endfor %}
             </tbody>
         </table>
-        <a href="" class="btn btn-success">Export report</a>
+        <a href="" class="btn btn-success">Export Report</a>
 
 
     </div>
