Adjusted header consistency across forms and pages, updated previously missed form styles, and removed unused views/templates/URLs

--- a/templates/KITS/create_req.html
+++ b/templates/KITS/create_req.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
-    <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;
-}
-    </style>
-    <div class="box">
-        <H1><b style="font-size: .75em;">Add Requisition Information</b></H1>
+
+    <div class="container-fluid">
+        <H2>Study {{ study.IRB_number }}: Add Requisition Information</H2>
         <hr>
+
         <form method="POST" class="study-form" enctype="multipart/form-data">{% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Confirm</button>
