--- a/templates/KITS/report.html
+++ b/templates/KITS/report.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
-    <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;
-}
-    </style>
+
     <div class="container-fluid">
         <H2>Reports</H2>
         <hr>
+
         <div class="container">
             <H5>Expired Kits</H5>
 
