--- a/templates/KITS/study_edit.html
+++ b/templates/KITS/study_edit.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 
 {% block content %}
 
     <div class="container-fluid">
 
-    <h2>Edit Study</h2>
+    <h2>Study {{ study.IRB_number }}: Edit Study</h2>
+        <hr>
+
     <form method="POST" class="">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-success">Update</button>
