--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -27,7 +27,7 @@
     </button>
     <a class="navbar-brand" href="{% url 'KITS:home' %}">
       <img src="{% static '' %}" alt="" width="30" height="30" class="d-inline-block align-self-center"> <!-- LOGO HERE -->
-      KITS
+      KITS (NEED LOGO)
     </a>
     <div class="collapse navbar-collapse justify-content-center" id="navbarText">
       <div class="navbar-nav mb-2 mb-lg-0">
