--- a/templates/KITS/kit_checkout.html
+++ b/templates/KITS/kit_checkout.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
 
     <div class="container-fluid">
         <H2>Kit Checkout</H2>
 
+        <hr>
         <form method="get">
             {{ kit_instance_filter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
+        <hr>
 
         <table class="table table-striped table-bordered table-hover table-secondary">
             <thead>
