--- a/templates/KITS/kit_edit.html
+++ b/templates/KITS/kit_edit.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 
 {% block content %}
 
     <div class="container-fluid">
 
     <H2>Editing the "{{ kit.type_name }}" kit for IRB: {{ kit.IRB_number }}</H2>
+    <hr>
 
     <form method="POST" class="">{% csrf_token %}
         {{ form.as_p }}
