--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
 
     {% if messages %}
@@ -13,11 +13,13 @@
 
     <div class="container-fluid">
         <H2>Types of Kits</H2>
-         <form method="get">
-           {{ kit_filter.form }}
+
+        <hr>
+        <form method="get">
+            {{ kit_filter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
-
+        <hr>
 
         <table class="table table-striped table-bordered table-secondary">
             <thead>
