--- a/templates/KITS/kit_ordering.html
+++ b/templates/KITS/kit_ordering.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 
 {% block content %}
 
     <div class="container-fluid">
     <h2>Edit Kit Order Details</h2>
+    <hr>
 
     <form method="POST" class="" enctype="multipart/form-data">{% csrf_token %}
         {{ form.as_p }}
