--- a/templates/KITS/list_history.html
+++ b/templates/KITS/list_history.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
 
     <div class="container-fluid">
         <H2>Kit Instance History</H2>
+
         <hr>
         <div class="d-flex">
             <h5>Action Key:</h5>
             <h5 class="ms-5">+ = Created</h5>
             <h5 class="ms-5">~ = Changed</h5>
         </div>
+        <hr>
+
         <table class="table table-striped table-bordered table-hover table-secondary">
             <thead>
             <tr class="bg-info">
