--- a/templates/KITS/report_expiredkits.html
+++ b/templates/KITS/report_expiredkits.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
-    <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;
-}
-    </style>
-    <div class="box">
-        <H1><b style="font-size: .75em;">Reports > All expired kits </b></H1>
+
+    <div class="container-fluid">
+        <H2>Reports - All Expired Kits</H2>
         <hr>
     <p> {{ test }}</p>
     <form method="get">
@@ -20,7 +13,7 @@
         </form>
 
     <hr>
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-striped table-bordered table-hover table-secondary">
             <thead>
             <tr class="bg-info">
                 <th>IRB</th>
