--- a/templates/KITS/report_expiredkits_studies.html
+++ b/templates/KITS/report_expiredkits_studies.html
@@ -1,43 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
-    <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;
-}
-    </style>
-    <div class="box">
-        <H1><b style="font-size: .75em;">Reports > All studies with expired kits </b></H1>
 
-    <hr>
-    <table class="table table-striped table-bordered table-hover">
+    <div class="container-fluid">
+        <H2>Reports - Studies with Expired Kits</H2>
+        <hr>
+        <table class="table table-striped table-bordered table-hover table-secondary">
             <thead>
-            <tr class="bg-info">
-                <th>IRB</th>
-                <th>Pet Name</th>
-                <th>Number of Expired Kits</th>
-
-
-
-            </tr>
+                <tr class="bg-info">
+                    <th>IRB</th>
+                    <th>Pet Name</th>
+                    <th>Number of Expired Kits</th>
+                </tr>
             </thead>
             <tbody>
-            {% for kit in kits %}
-            <tr>
-                <td>{{ kit.IRB_number__IRB_number}}</td>
-                <td>{{ kit.IRB_number__pet_name }}</td>
-                <td>{{ kit.qty }}</td>
-            </tr>
-            {% endfor %}
+                {% for kit in kits %}
+                <tr>
+                    <td>{{ kit.IRB_number__IRB_number}}</td>
+                    <td>{{ kit.IRB_number__pet_name }}</td>
+                    <td>{{ kit.qty }}</td>
+                </tr>
+                {% endfor %}
             </tbody>
         </table>
         <a href="{% url 'KITS:export_studieswithexpiredkits' %}" class="btn btn-success">Export Report</a>
-
-
     </div>
 {% endblock %}
 
