--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
     <div class="container-fluid">
         <H2>Study: {{ study }} "{{ study.pet_name }}"</H2>
+        <hr>
 
         <p><b>Status: </b>{{ study.status }}</p>
         <p><b>Sponsor: </b>{{ study.sponsor_name }}</p>
