--- a/templates/KITS/study_detail_seeallkits.html
+++ b/templates/KITS/study_detail_seeallkits.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
 
     <div class="container-fluid">
         <H2>Study {{ study.IRB_number }} "{{ study.pet_name }}" > All Kits</H2>
+        <hr>
 
         <table class="table table-striped table-bordered table-hover table-secondary">
             <thead>
