--- a/templates/KITS/study_list.html
+++ b/templates/KITS/study_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
 
     <div class="container-fluid">
@@ -15,10 +15,12 @@
             {% endfor %}
         {% endif %}
 
+        <hr>
         <form method="get">
             {{ study_filter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
+        <hr>
 
         <table class="table table-striped table-secondary table-bordered table-hover">
             <thead>
