--- a/templates/KITS/user_list.html
+++ b/templates/KITS/user_list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 {% block content %}
 
     <div class="container-fluid">
-        <H2>Studies</H2>
+        <H2>User Activity</H2>
 
         {% if messages %}
             {% for message in messages %}
@@ -14,11 +14,12 @@
             {% endfor %}
         {% endif %}
 
+        <hr>
         <form method="get">
            {{ study_filter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
-
+        <hr>
 
         <table class="table table-striped table-bordered table-hover table-secondary">
             <thead>
