--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends "KITS/base2.html" %}
+{% extends "KITS/base.html" %}
 
 {% block content %}
     <div class="d-flex flex-column align-items-center mt-5">
