--- a/templates/KITS/report_storageusage.html
+++ b/templates/KITS/report_storageusage.html
@@ -3,7 +3,7 @@
 
 
 
-{% extends 'KITS/base2.html' %}
+{% extends 'KITS/base.html' %}
 
 
 {% block content %}
@@ -44,8 +44,6 @@
 
     <div class="box">
         <H1><b style="font-size: .75em;">Reports > Storage Usage</b></H1>
-
-        <p>{{ location }}</p>
 
 
         <hr>
