functioning reports. format is wonky. fixed UNMC logo on base.html. not doing reports on storageusage and study activity.

--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -26,8 +26,8 @@
           <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="{% url 'KITS:home' %}">
-      <img src="{% static '' %}" alt="" width="30" height="30" class="d-inline-block align-self-center"> <!-- LOGO HERE -->
-      KITS (NEED LOGO)
+      <img src="{% static 'images/logo_med.png' %}" alt="" width="30" height="30" class="d-inline-block align-self-center"> <!-- LOGO HERE -->
+
     </a>
     <div class="collapse navbar-collapse justify-content-center" id="navbarText">
       <div class="navbar-nav mb-2 mb-lg-0">
