--- a/templates/KITS/user_list.html
+++ b/templates/KITS/user_list.html
@@ -41,7 +41,7 @@
             {% endfor %}
             </tbody>
         </table>
-
+            <a href="{% url 'KITS:export_user' %}" class="btn btn-success">Export Report</a>
     </div>
 {% endblock %}
 
