--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -27,6 +27,7 @@
           <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="{% url 'KITS:home' %}">
+        <!-- Logo is here -->
       <img src="{% static 'images/box_icon.png' %}" alt="" width="30" height="30" class="d-inline-block align-self-center">
       KITS
     </a>
