--- a/templates/KITS/report_activestudies.html
+++ b/templates/KITS/report_activestudies.html
@@ -4,50 +4,43 @@
 
 {% block content %}
     <style>
-
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;}
-
     .column12 {
         float: left;
         margin: 8px;
-        width: 25%;}
+        width: 25%;
+    }
 
     .column3 {
         float: left;
-        margin: 0px;
-        width: 46%;}
-
+        margin: 0;
+        width: 46%;
+    }
 
 /* Clear floats after the columns */
     .row:after {
-    content: "";
-    display: table;
-    clear: both;}
-
+        content: "";
+        display: table;
+        clear: both;
+    }
     </style>
 
-{% if messages %}
+    {% if messages %}
         {% for message in messages %}
             <div class="alert alert-danger" role="alert">
-            {{ message }}
+                {{ message }}
             </div>
         {% endfor %}
     {% endif %}
 
-    <div class="box">
-        <H1><b style="font-size: .75em;">Reports > Active and Less Active Studies</b></H1>
+    <div class="container-fluid">
+        <H2>Reports - Study Activity</H2>
         <hr>
-
 
         <form method="POST">
         {% csrf_token %}
-        <p>Filter by date range:</p>
-        <input type="text" name="startdate">
-        <input type="text" name="enddate">
+        <h6>Filter by date range:</h6>
+        <span>From: </span><input type="text" name="startdate">
+        <span>To: </span><input type="text" name="enddate">
 
         <button class="btn btn-primary" type="submit">Search</button>
         </form>
@@ -55,63 +48,57 @@
         <hr>
         <p> Kit Activity from {{ startdate }} to {{ enddate }}</p>
         <hr>
+
         <div class="row">
-        <div class="column12" style="margin-left: 12px;">
-        <h2>Most Active Studies</h2>
+            <div class="column12" style="margin-left: 12px;">
+                <h3>Most Active Studies</h3>
 
-
-            <table class="table table-striped table-bordered table-hover">
-                <thead>
-                <tr class="bg-info">
-                    <th>IRB</th>
-                    <th>Name</th>
-                    <th>Kits Checked Out</th>
-
-                </tr>
-                </thead>
-                <tbody>
-                {% for study in active_studies %}
-                    <tr>
-                        {% for s in study %}
-                        <td>{{ s }}</td>
+                <table class="table table-striped table-bordered table-hover table-secondary">
+                    <thead>
+                        <tr class="bg-info">
+                            <th>IRB</th>
+                            <th>Name</th>
+                            <th>Kits Checked Out</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for study in active_studies %}
+                            <tr>
+                                {% for s in study %}
+                                <td>{{ s }}</td>
+                                {% endfor %}
+                            </tr>
                         {% endfor %}
-                    </tr>
+                    </tbody>
+                </table>
+            </div>
 
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+            <div class="column12">
+                <h3>Least Active Studies</h3>
 
-        <div class="column12">
-        <h2>Least Active Studies</h2>
+                <table class="table table-striped table-bordered table-hover table-secondary">
+                    <thead>
+                        <tr class="bg-info">
+                            <th>IRB</th>
+                            <th>Name</th>
+                            <th>Kits Checked Out</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for study in not_active_studies %}
+                        <tr>
+                            {% for s in study %}
+                            <td>{{ s }}</td>
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-             <table class="table table-striped table-bordered table-hover">
-                <thead>
-                <tr class="bg-info">
-                    <th>IRB</th>
-                    <th>Name</th>
-                    <th>Kits Checked Out</th>
-
-                </tr>
-                </thead>
-                <tbody>
-                {% for study in not_active_studies %}
-                    <tr>
-                        {% for s in study %}
-                        <td>{{ s }}</td>
-                        {% endfor %}
-                    </tr>
-
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-        <div class="column3" style="background-color:white;">
-            {{ graph|safe }}
-
-
-        </div>
+            <div class="column3" style="background-color:white;">
+                {{ graph|safe }}
+            </div>
         </div>
 
     </div>
