--- a/templates/KITS/report_storageusage.html
+++ b/templates/KITS/report_storageusage.html
@@ -33,7 +33,7 @@
     {% endif %}
 
     <div class="container-fluid">
-        <H2>Reports - Storage Usage</H2>
+        <H2>Reports - Storage Summary</H2>
         <hr>
 
         <div class="row">
