--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -53,7 +53,7 @@
               <li><a class="dropdown-item" href="{% url 'KITS:report_expiredkits_studies' %}">Studies w/ Expired Kits</a></li>
               <li><a class="dropdown-item" href="{% url 'KITS:report_activestudies' %}">Study Activity</a></li>
               <li><a class="dropdown-item" href="{% url 'KITS:user_list' %}">User Activity</a></li>
-              <li><a class="dropdown-item" href="{% url 'KITS:report_storageusage' %}">Storage Usage</a></li>
+              <li><a class="dropdown-item" href="{% url 'KITS:report_storageusage' %}">Storage Summary</a></li>
           </ul>
         </div>
         <a class="nav-link" href="{% url 'KITS:list_history' %}">Kit Instance Changes</a>
