--- a/templates/KITS/report_activestudies.html
+++ b/templates/KITS/report_activestudies.html
@@ -51,7 +51,7 @@
 
         <div class="row">
             <div class="column12" style="margin-left: 12px;">
-                <h3>Most Active Studies</h3>
+                <h3>Most kits checked out</h3>
 
                 <table class="table table-striped table-bordered table-hover table-secondary">
                     <thead>
@@ -74,14 +74,14 @@
             </div>
 
             <div class="column12">
-                <h3>Least Active Studies</h3>
+                <h3>Most kits demolished</h3>
 
                 <table class="table table-striped table-bordered table-hover table-secondary">
                     <thead>
                         <tr class="bg-info">
                             <th>IRB</th>
                             <th>Name</th>
-                            <th>Kits Checked Out</th>
+                            <th>Kits Demolished</th>
                         </tr>
                     </thead>
                     <tbody>
