minor model changes to kit ordering and requisitions

--- a/templates/KITS/kit_ordering.html
+++ b/templates/KITS/kit_ordering.html
@@ -6,7 +6,8 @@
 {% block content %}
 
     <div class="container-fluid">
-    <h2>Edit Kit Order Details</h2>
+
+    <H2>Add Kit Ordering Information</H2>
     <hr>
 
     <form method="POST" class="" enctype="multipart/form-data">{% csrf_token %}
