--- a/templates/KITS/report_activestudies.html
+++ b/templates/KITS/report_activestudies.html
@@ -38,7 +38,7 @@
 
         <form method="POST">
         {% csrf_token %}
-        <h6>Filter by date range:</h6>
+        <h6>Filter by date range: MM-DD-YYYY</h6>
         <span>From: </span><input type="text" name="startdate">
         <span>To: </span><input type="text" name="enddate">
 
