--- a/templates/KITS/report_userstudies.html
+++ b/templates/KITS/report_userstudies.html
@@ -2,17 +2,18 @@
 <html lang="en">
 {% extends 'KITS/base.html' %}
 {% block content %}
+    {% if request.user.is_staff %}
     <style>
     .column12 {
         float: left;
         margin: 8px;
-        width: 25%;
+        width: 35%;
     }
 
     .column3 {
         float: left;
         margin: 0;
-        width: 46%;
+        width: 27%;
     }
 
 /* Clear floats after the columns */
@@ -32,7 +33,7 @@
     {% endif %}
 
     <div class="container-fluid">
-        <H2>Reports - User Activity For {{ user }}</H2>
+        <H2>Reports - User Study Activity For: {{ user }}</H2>
         <hr>
 
         <form method="POST">
@@ -45,7 +46,7 @@
         </form>
 
         <hr>
-        <p> Studies Created and Modified For The User</p>
+        <p> Studies Created, Changed, and Deleted From {{ startdate }} To {{ enddate }}</p>
         <hr>
 
         <div class="row">
@@ -66,7 +67,6 @@
                                 <td>{{ forloop.counter }}</td>
                                 <td>{{ instances.IRB_number }}</td>
                                  <td>{{ instances.pet_name }}</td>
-                                <td>{{ instances.history_user_id }}</td>
                              </tr>
                          {% endfor %}
                     </tbody>
@@ -90,7 +90,6 @@
                                 <td>{{ forloop.counter }}</td>
                                 <td>{{ instances.IRB_number }}</td>
                                  <td>{{ instances.pet_name }}</td>
-                                <td>{{ instances.history_user_id }}</td>
                              </tr>
                          {% endfor %}
                     </tbody>
@@ -98,9 +97,31 @@
             </div>
 
             <div class="column3" style="background-color:white;">
-                {{ graph|safe }}
+                                <h3>Studies Deleted</h3>
+                <table class="table table-striped table-bordered table-hover table-secondary">
+                    <thead>
+                        <tr class="bg-info">
+                            <th>#</th>
+                            <th>IRB</th>
+                            <th>Name</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                       {% for instances in queryset_deleted %}
+                            <tr>
+                                <td>{{ forloop.counter }}</td>
+                                <td>{{ instances.IRB_number }}</td>
+                                 <td>{{ instances.pet_name }}</td>
+                             </tr>
+                         {% endfor %}
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+    {% endif %}
+    {% if not request.user.is_staff %}
+        <p>Not authorized to access this page.</p>
+    {% endif %}
 {% endblock %}
 </html>
